tests/snapshots/integration__integration_tests__switch__switch_previous_branch.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "-"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1m[32mfeature-a[0m[32m at [1m[32m[REPO].feature-a[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----
